--- a/index.html
+++ b/index.html
@@ -219,8 +219,7 @@
                   discovery and expands horizons for those with wanderlust, driven by a
                   love of technology and a desire to improve travel experiences.
                 </p>
-                <br>
-                <a href=""><h3>Certificate</h3></a>
+                <button class="card__btn"><a href="https://drive.google.com/file/d/1-qYkTlcnSqUJVJ59ymCxZCQXakKZSDOX/view?usp=sharing" target="_blank">Certificate</a></button>
               </div>
             </div>
 
@@ -240,13 +239,12 @@
             <div class="achievements-content">
               <div class="content">
                 <div class="year"><i class="bx bxs-calendar"></i>2022-2023</div>
-                <h3>JSPM Prakalp</h3>
+                <h3>JSPM Innovation</h3>
                 <p>
-                  Our ground-breaking project helped us <span>WIN</span> the JSPM Prakalp National Project Competition. 
+                  Our ground-breaking project helped us <span>WIN</span> the JSPM Innovation National Project Competition. 
                   Our creative solution highlighted our dedication to excellence and problem-solving skills.
                 </p>
-                <br>
-                <a href=""><h3>Certificate</h3></a>
+                <button class="card__btn"><a href="https://drive.google.com/file/d/1j4OGQEaFH9yb22LT4LhxQFYdpNs6tGKB/view?usp=sharing" target="_blank">Certificate</a></button>
               </div>
             </div>
             
@@ -258,8 +256,7 @@
                   We advanced to the quarterfinals of the GeekforGrrks "Solving for India" Hackathon by using creative 
                   solutions to real-world problems. Our success demonstrates our commitment to using technology to create lasting change.
                 </p>
-                <br>
-                <a href=""><h3>Certificate</h3></a>
+                <button class="card__btn"><a href="https://drive.google.com/file/d/1Ua-eFdVTc2wu65DsaX6iN62jbvr7_2cg/view?usp=sharing" target="_blank">Certificate</a></button>
               </div>
             </div>
           </div>
@@ -271,15 +268,14 @@
               <div class="achievements-content">
                 <div class="content">
                   <div class="year"><i class="bx bxs-calendar"></i>2022-2023</div>
-                  <h3>MIT WPU National Project Competition</h3>
+                  <h3>SIT National Project Competition</h3>
                   <p>
-                    We triumphantly won the top prize in the MIT W-PUS National Project Competition. 
+                    We triumphantly won the top prize in the SITS National Project Competition. 
                     We received <span> First Place </span> honours for our excellent project and poster, which 
                     is a reflection of our unwavering commitment and creative strength. 
                     This accomplishment motivates us to strive for academic greatness moving forward.
                   </p>
-                  <br>
-                  <a href=""><h3>Certificate</h3></a>
+                  <button class="card__btn"><a href="https://drive.google.com/file/d/1FNBbPnIjGU3W1vLf5b_IwsrNMhdyvlyc/view?usp=sharing" target="_blank">Certificate</a></button>
                 </div>
               </div>
 
@@ -293,8 +289,7 @@
                     amplifying agriculture's potential with cutting-edge technology. Our journey 
                     reflects the fusion of tech and farming for a greener tomorrow.
                   </p>
-                  <br>
-                  <a href=""><h3>Certificate</h3></a>
+                  <button class="card__btn"><a href="https://drive.google.com/file/d/1OeJRmGV72I_D-T-55F1-DUMG9K6TWe3e/view?usp=sharing" target="_blank">Certificate</a></button>
                 </div>
               </div>
 
@@ -306,8 +301,7 @@
                     I contributed electric musical energy to the stage as a keyboard player to the high-current 
                     COEP Impression event, resulting in an amazing aural experience that the audience could not forget.
                   </p>
-                  <br>
-                  <a href=""><h3>Certificate</h3></a>
+                  <button class="card__btn"><a href="https://drive.google.com/file/d/1xfR3lrdDSsL0AT74KPW0xcr4bvQpTbi4/view?usp=sharing" target="_blank">Certificate</a></button>
                 </div>
               </div>
               
@@ -320,7 +314,7 @@
                     that cross boundaries and stir the soul. Each note is evidence of my commitment and creativity.
                   </p>
                   <br>
-                  <a href=""><h3>Certificate</h3></a>
+                  <button class="card__btn"><a href="https://drive.google.com/file/d/1bqNcDHy2MMCL6TygUcg9cUTeL_x5S8ju/view?usp=sharing" target="_blank">Certificate</a></button>
                 </div>
               </div>
             </div>
