--- a/index.html
+++ b/index.html
@@ -210,11 +210,11 @@
             <div class="achievements-content">
               <div class="content">
                 <div class="year"><i class="bx bxs-calendar"></i>2021-2022</div>
-                <h3>Airtel IQ Hackathon <span>FINALIST</span></h3>
+                <h3>Airtel IQ Hackathon 2022 - 2023</h3>
                 <p>
                   Our team's commitment and ingenuity showed through as we set off 
                   on an innovative adventure at the Airtel IQ Hackathon. We happily 
-                  achieved one of India's top 10 finalists as a result of our efforts. 
+                  achieved one of <span> India's Top 10 Finalists</span> as a result of our efforts. 
                   We created a cutting-edge WhatsApp chatbot for travel and tourism that simplifies
                   discovery and expands horizons for those with wanderlust, driven by a
                   love of technology and a desire to improve travel experiences.
@@ -313,7 +313,6 @@
                     As a keyboardist at the regional level, I focus my enthusiasm on creating melodies 
                     that cross boundaries and stir the soul. Each note is evidence of my commitment and creativity.
                   </p>
-                  <br>
                   <button class="card__btn"><a href="https://drive.google.com/file/d/1bqNcDHy2MMCL6TygUcg9cUTeL_x5S8ju/view?usp=sharing" target="_blank">Certificate</a></button>
                 </div>
               </div>
