--- a/index.html
+++ b/index.html
@@ -87,113 +87,112 @@
       <div class="swiper-wrapper">
         <div class="card swiper-slide">
           <div class="card__image">
-            <img src="/images/user1.jpg" alt="card image" />
+            <img src="./Project/drone.jpg" alt="card image" />
           </div>
 
           <div class="card__content">
             <span class="card__title">Krushi Karmi</span>
 
             <p class="card__text">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit
-              veritatis labore provident non tempora odio est sunt, ipsum
+              An innovative solution for damage crop leaf detection and
+              hardware to do soil testing. It is an ML model with an
+              accuracy of 95%+.
             </p>
-            <button class="card__btn">Demo</button>
+            <button class="card__btn"><a href="https://www.youtube.com/watch?v=RXmJ54QYwvc" target="_blank"> Demo </a></button>
           </div>
         </div>
 
         <div class="card swiper-slide">
           <div class="card__image">
-            <img src="/images/user2.jpg" alt="card image" />
-          </div>
-
-          <div class="card__content">
-            <span class="card__title">WhatsApp ChatBot for Travel and Tourism</span>
-
-            <p class="card__text">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit
-              veritatis labore provident non tempora odio est sunt, ipsum
-            </p>
-            <button class="card__btn">Demo</button>
-          </div>
-        </div>
-
-        <div class="card swiper-slide">
-          <div class="card__image">
-            <img src="/images/user2.jpg" alt="card image" />
-          </div>
-
-          <div class="card__content">
-            <span class="card__title">Soil Testing Hardware</span>
-
-            <p class="card__text">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit
-              veritatis labore provident non tempora odio est sunt, ipsum
-            </p>
-            <button class="card__btn">Demo</button>
-          </div>
-        </div>
-
-        <div class="card swiper-slide">
-          <div class="card__image">
-            <img src="/images/user2.jpg" alt="card image" />
+            <img src="./Project/skin.png" alt="card image" />
           </div>
 
           <div class="card__content">
             <span class="card__title">Skin Disease Detection</span>
 
             <p class="card__text">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit
-              veritatis labore provident non tempora odio est sunt, ipsum
+              Innovatively spearheaded Skin Disease Detection initiative, 
+              leveraging AI to revolutionize dermatological assessments for enhanced patient care.
             </p>
-            <button class="card__btn">Demo</button>
+            <button class="card__btn"><a href="http://193.160.119.172/my-patients/" target="_blank"> Demo </a></button>
           </div>
         </div>
 
         <div class="card swiper-slide">
           <div class="card__image">
-            <img src="/images/user2.jpg" alt="card image" />
+            <img src="./Project/chatbot.png" alt="card image" />
+          </div>
+
+          <div class="card__content">
+            <span class="card__title">WhatsApp ChatBot</span>
+
+            <p class="card__text">
+              Elevated experience by solving user challenges in booking flights, 
+              hotels, and holiday packages across various websites.
+            </p>
+            <button class="card__btn"><a href="https://www.youtube.com/watch?v=uofG-WRyE0g" target="_blank"> Demo </a></button>
+          </div>
+        </div>
+
+        <div class="card swiper-slide">
+          <div class="card__image">
+            <img src="./Project/soil.jpg" alt="card image" />
+          </div>
+
+          <div class="card__content">
+            <span class="card__title">Soil Testing Hardware</span>
+
+            <p class="card__text">
+              Revolutionizing soil testing with cutting-edge hardware 
+              for accurate and efficient analyses.
+            </p>
+            <button class="card__btn"><a href="https://www.youtube.com/watch?v=RXmJ54QYwvc" target="_blank"> Demo </a></button>
+          </div>
+        </div>
+
+        <div class="card swiper-slide">
+          <div class="card__image">
+            <img src="./Project/pccoer.png" alt="card image" />
           </div>
 
           <div class="card__content">
             <span class="card__title">PCCOER WEB</span>
-
             <p class="card__text">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit
-              veritatis labore provident non tempora odio est sunt, ipsum
+              Revamped and optimized PCCOER website, enhancing design and
+              functionality for an improved user experience.
             </p>
-            <button class="card__btn">Demo</button>
+            <button class="card__btn"><a href="https://pccoer.com" target="_blank"> Demo </a></button>
           </div>
         </div>
 
         <div class="card swiper-slide">
           <div class="card__image">
-            <img src="/images/user3.jpg" alt="card image" />
+            <img src="./Project/tooth.png" alt="card image" />
           </div>
 
           <div class="card__content">
-            <span class="card__title">XYZr</span>
+            <span class="card__title">Tooth Lesion Detection</span>
 
             <p class="card__text">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit
-              veritatis labore provident non tempora odio est sunt, ipsum
+              Periapical Tooth Lesion Detection with YOLOv5: Advancing
+              diagnostics through cutting-edge AI technology.
             </p>
-            <button class="card__btn">Demo</button>
+            <button class="card__btn"><a href="https://drive.google.com/drive/folders/10pWlaf_y2Q6m2CkZTsvlxPRkKiuFyH3O?usp=sharing" target="_blank"> Demo </a></button>
           </div>
         </div>
 
         <div class="card swiper-slide">
           <div class="card__image">
-            <img src="/images/user4.jpg" alt="card image" />
+            <img src="./Project/bugdet.png" alt="card image" />
           </div>
 
           <div class="card__content">
-            <span class="card__title">XYZ</span>
+            <span class="card__title">Budget Analyzer</span>
 
             <p class="card__text">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit
-              veritatis labore provident non tempora odio est sunt, ipsum
+              "Effortlessly manage budgets and expenses with a dynamic website built using React.js.
             </p>
-            <button class="card__btn">Demo</button>
+            <button class="card__btn"><a href="https://github.com/RajatDeore7/Budget-Repo" target="_blank"> Demo </a></button>
           </div>
         </div>
       </div>
@@ -209,7 +208,7 @@
           <div class="achievements-box">
             <div class="achievements-content">
               <div class="content">
-                <div class="year"><i class="bx bxs-calendar"></i>2021-2022</div>
+                <div class="year"><i class="bx bxs-calendar"></i>2022-2023</div>
                 <h3>Airtel IQ Hackathon 2022 - 2023</h3>
                 <p>
                   Our team's commitment and ingenuity showed through as we set off 
