--- a/index.html
+++ b/index.html
@@ -405,16 +405,6 @@
               <span class="java"></span>
             </div>
           </div>
-          
-          <div class="skill-bar">
-            <div class="info">
-              <p>C++</p>
-              <p>70%</p>
-            </div>
-            <div class="bar">
-              <span class="cpp"></span>
-            </div>
-          </div>
 
           <div class="skill-bar">
             <div class="info">
@@ -429,7 +419,7 @@
           <div class="skill-bar">
             <div class="info">
               <p>HTML</p>
-              <p>95%</p>
+              <p>100%</p>
             </div>
             <div class="bar">
               <span class="html"></span>
@@ -439,7 +429,7 @@
           <div class="skill-bar">
             <div class="info">
               <p>CSS</p>
-              <p>90%</p>
+              <p>100%</p>
             </div>
             <div class="bar">
               <span class="css"></span>
@@ -506,6 +496,16 @@
               </div>
               <div class="bar">
                 <span class="mongo"></span>
+              </div>
+            </div>
+
+            <div class="skill-bar">
+              <div class="info">
+                <p>SQL</p>
+                <p>70%</p>
+              </div>
+              <div class="bar">
+                <span class="cpp"></span>
               </div>
             </div>
 
