--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
                 <p>70%</p>
               </div>
               <div class="bar">
-                <span class="cpp"></span>
+                <span class="sql"></span>
               </div>
             </div>
 
