--- a/index.html
+++ b/index.html
@@ -501,21 +501,21 @@
 
             <div class="skill-bar">
               <div class="info">
-                <p>SQL</p>
-                <p>70%</p>
-              </div>
-              <div class="bar">
-                <span class="sql"></span>
-              </div>
-            </div>
-
-            <div class="skill-bar">
-              <div class="info">
                 <p>Express Js</p>
                 <p>75%</p>
               </div>
               <div class="bar">
                 <span class="exp"></span>
+              </div>
+            </div>
+
+            <div class="skill-bar">
+              <div class="info">
+                <p>SQL</p>
+                <p>70%</p>
+              </div>
+              <div class="bar">
+                <span class="SQL"></span>
               </div>
             </div>
 
