--- a/index.html
+++ b/index.html
@@ -511,16 +511,6 @@
 
             <div class="skill-bar">
               <div class="info">
-                <p>SQL</p>
-                <p>70%</p>
-              </div>
-              <div class="bar">
-                <span class="SQL"></span>
-              </div>
-            </div>
-
-            <div class="skill-bar">
-              <div class="info">
                 <p>GitHub</p>
                 <p>90%</p>
               </div>
@@ -536,6 +526,16 @@
               </div>
               <div class="bar">
                 <span class="fire"></span>
+              </div>
+            </div>
+
+            <div class="skill-bar">
+              <div class="info">
+                <p>SQL</p>
+                <p>70%</p>
+              </div>
+              <div class="bar">
+                <span class="sql"></span>
               </div>
             </div>
           </div>
