--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <a href="https://drive.google.com/file/d/1UvUdnSv5w6KKGmFdqi6JcFuZME7T2r-p/view?usp=drivesdk" class="btn" target="_blank">Download Resume</a>
       </div>
       <div class="home-img">
-        <img src="home.png" alt="" />
+        <img src="./home.jpg" alt="" />
       </div>
     </section>
 
