--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </p>
 
         <div class="btn-box btns">
-          <a href="#" class="btn">Demo</a>
+          <a href="#" class="btn">VIEW</a>
         </div>
       </div>
     </section> -->
@@ -98,7 +98,7 @@
               hardware to do soil testing. It is an ML model with an
               accuracy of 95%+.
             </p>
-            <button class="card__btn"><a href="https://www.youtube.com/watch?v=RXmJ54QYwvc" target="_blank"> Demo </a></button>
+            <button class="card__btn"><a href="https://www.youtube.com/watch?v=RXmJ54QYwvc" target="_blank"> VIEW </a></button>
           </div>
         </div>
 
@@ -114,7 +114,38 @@
               Innovatively spearheaded Skin Disease Detection initiative, 
               leveraging AI to revolutionize dermatological assessments for enhanced patient care.
             </p>
-            <button class="card__btn"><a href="http://193.160.119.172/my-patients/" target="_blank"> Demo </a></button>
+            <button class="card__btn"><a href="http://193.160.119.172/my-patients/" target="_blank"> VIEW </a></button>
+          </div>
+        </div>
+
+        <div class="card swiper-slide">
+          <div class="card__image">
+            <img src="./Project/pccoer.png" alt="card image" />
+          </div>
+
+          <div class="card__content">
+            <span class="card__title">PCCOER WEB</span>
+            <p class="card__text">
+              Revamped and optimized PCCOER website, enhancing design and
+              functionality for an improved user experience.
+            </p>
+            <button class="card__btn"><a href="https://pccoer.com" target="_blank"> VIEW </a></button>
+          </div>
+        </div>
+
+        <div class="card swiper-slide">
+          <div class="card__image">
+            <img src="./Project/earthly.png" alt="card image" />
+          </div>
+
+          <div class="card__content">
+            <span class="card__title">Website for Earthly</span>
+
+            <p class="card__text">
+              Developed and deployed a responsive website for Earthly’s Sustainability Starter Kit using HTML5, CSS3, JavaScript,
+              and Bootstrap on GitHub Pages.
+            </p>
+            <button class="card__btn"><a href="https://github.com/RajatDeore7/Earthly" target="_blank"> VIEW </a></button>
           </div>
         </div>
 
@@ -130,7 +161,7 @@
               Elevated experience by solving user challenges in booking flights, 
               hotels, and holiday packages across various websites.
             </p>
-            <button class="card__btn"><a href="https://www.youtube.com/watch?v=uofG-WRyE0g" target="_blank"> Demo </a></button>
+            <button class="card__btn"><a href="https://www.youtube.com/watch?v=uofG-WRyE0g" target="_blank"> VIEW </a></button>
           </div>
         </div>
 
@@ -146,22 +177,7 @@
               Revolutionizing soil testing with cutting-edge hardware 
               for accurate and efficient analyses.
             </p>
-            <button class="card__btn"><a href="https://www.youtube.com/watch?v=RXmJ54QYwvc" target="_blank"> Demo </a></button>
-          </div>
-        </div>
-
-        <div class="card swiper-slide">
-          <div class="card__image">
-            <img src="./Project/pccoer.png" alt="card image" />
-          </div>
-
-          <div class="card__content">
-            <span class="card__title">PCCOER WEB</span>
-            <p class="card__text">
-              Revamped and optimized PCCOER website, enhancing design and
-              functionality for an improved user experience.
-            </p>
-            <button class="card__btn"><a href="https://pccoer.com" target="_blank"> Demo </a></button>
+            <button class="card__btn"><a href="https://www.youtube.com/watch?v=RXmJ54QYwvc" target="_blank"> VIEW </a></button>
           </div>
         </div>
 
@@ -177,7 +193,7 @@
               Periapical Tooth Lesion Detection with YOLOv5: Advancing
               diagnostics through cutting-edge AI technology.
             </p>
-            <button class="card__btn"><a href="https://drive.google.com/drive/folders/10pWlaf_y2Q6m2CkZTsvlxPRkKiuFyH3O?usp=sharing" target="_blank"> Demo </a></button>
+            <button class="card__btn"><a href="https://drive.google.com/drive/folders/10pWlaf_y2Q6m2CkZTsvlxPRkKiuFyH3O?usp=sharing" target="_blank"> VIEW </a></button>
           </div>
         </div>
 
@@ -192,7 +208,7 @@
             <p class="card__text">
               "Effortlessly manage budgets and expenses with a dynamic website built using React.js.
             </p>
-            <button class="card__btn"><a href="https://github.com/RajatDeore7/Budget-Repo" target="_blank"> Demo </a></button>
+            <button class="card__btn"><a href="https://github.com/RajatDeore7/Budget-Repo" target="_blank"> VIEW </a></button>
           </div>
         </div>
       </div>
