--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         target="_blank">Download Resume</a>
     </div>
     <div class="home-img">
-      <img src="./home.jpg" alt="" />
+      <img src="./Professional.jpg" alt="" />
     </div>
   </section>
 
